# tradingbot

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  check_config.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.gemini/: candle_signal_pipeline_analysis.md  config_realtime_analysis.md  event_bus_publish_sync.py
.github/workflows/: README.md  cd.yml  ci.yml  rollback.yml
.serena/: project.yml
.serena/memories/: task_completion_workflow.md  trading_bot_mainnet_status.md  trading_bot_session_2025-11-19.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/sessions/: README.md
.taskmaster/tasks/: tasks.json
alembic/: env.py
claudedocs/: grafana-testing-session-summary.md
config/: config.example.yaml  default_config.yaml  mainnet_config.yaml  prometheus.yml  testnet_config.yaml
config/logrotate/: tradingbot
config/systemd/: tradingbot-backup.service  tradingbot-backup.timer  tradingbot.service
docs/: AUTOMATION.md  CI-CD-SETUP.md  DATABASE_MIGRATIONS.md  DOCKER.md  TASK_12.7_SUMMARY.md  candle_data_manager.md  grafana-quick-start.md  grafana-setup.md  historical_data_loader.md  liquidity_sweep_implementation.md  liquidity_zone_implementation.md  opentelemetry_tracing.md  order_executor_implementation.md  order_tracker_implementation.md  retry_manager_implementation.md  task-10-order-execution-and-position-management.md  task-11-system-integration-and-orchestration.md  task-8-trading-strategy-engine.md  task-9-risk-management-system.md  task_1_project_setup_implementation.md  task_2_event_system_implementation.md  task_3_binance_api_implementation.md  task_4.5_implementation_summary.md  task_4_candle_data_management.md  task_5_database_implementation.md  task_6_1_implementation_summary.md  task_6_ict_indicator_engine.md  task_7.3_trend_recognition_implementation.md  task_7_ict_integration_system.md  testing-grafana.md
docs/operations/: BACKUP_RECOVERY.md  DEPLOYMENT.md  INCIDENT_RESPONSE.md  MONITORING.md  NEXT_SESSION_TODO.md  PERFORMANCE_TUNING.md  TESTNET_MAINNET_SWITCH.md  background_task_analysis_2025-11-19.md  implementation_task_registration_2025-11-19.md  mainnet_status_2025-11-18.md
examples/: candle_data_manager_example.py  config_manager_example.py  historical_data_loading.py
k8s/helm/: DEPLOYMENT_SUMMARY.md
scripts/: backup_database.sh  db_manager.py  docker-entrypoint.sh  install_automation.sh  restore_database.sh  test_recovery.sh  verify_fix.py
src/: __main__.py
src/api/: logging_middleware.py  middleware.py  server.py  websocket.py
src/core/: background_tasks.py  circuit_breaker.py  config.py  config_manager.py  constants.py  events.py  logging_config.py  metrics.py  orchestrator.py  parallel_processor.py  retry_manager.py  security.py
src/database/: __init__.py  engine.py  migrations.py  models.py
src/indicators/: __init__.py  breaker_block.py  expiration_manager.py  fair_value_gap.py  (+7 more)
tests/: test_candle_data_manager.py  test_circuit_breaker.py
(+152 files in other folders)
